--- a/resume-cv/education.tex
+++ b/resume-cv/education.tex
@@ -8,7 +8,7 @@
 \end{resumeList}
 \end{resumeItem}
 
-\ifboolexpr{ togl {graphics} or togl {general} }{}{
+\ifboolexpr{ togl {graphics} or togl {general} or togl {math} }{}{
  \begin{resumeItem}
  \experienceHead{High School Diploma}{Webber Academy}{2008 - 2022}{Calgary, AB.}
  \begin{resumeList}
