--- a/resume-cv/experience.tex
+++ b/resume-cv/experience.tex
@@ -25,7 +25,7 @@
     \item Authored a paper (The dimension of sparse random graph orders) in pre-print in arXiv (\href{https://arxiv.org/abs/2504.19029}{https://arxiv.org/abs/2504.19029}).
     \item Worked on novel research exploring random graph orders and poset dimension utilizing configuration models, approximation techniques, convergence in probability, devising constructions, and computationally searching for counterexamples. 
     % \item Examined a conjecture about poset dimension, designing and running programs to search for counterexamples, and devising constructions to improve random graph order dimension bounds.
-    \ifboolexpr{ togl {graphics} or togl {general} }{}{
+    \ifboolexpr{ togl {graphics} or togl {general} or togl {math} }{}{
      \item Developed two theorems about the nature of poset dimension for bipartite posets based on the dimension of induced subposets and for random graph orders.
      \item Engaged in regular meetings to discuss and advance research, demonstrating capacity for effective collaboration.
     }
@@ -36,7 +36,7 @@
 \experienceHead{Blockchain Software Engineer}{Dandelion Networks}{May 2023 - Aug 2023}{Remote}
 \begin{resumeList}
     \item Developed and implemented an enhanced lattice syncing and node discovery algorithm in Go, querying peers with Protocol Buffers to identify and address missing blocks in the local lattice with secure and concurrent updates.
-    \ifboolexpr{ togl {graphics} or togl {general} }{}{
+    \ifboolexpr{ togl {graphics} or togl {general} or togl {math} }{}{
      \item Created and deployed a locally hosted debugging website in Go to be run by each node of the blockchain network.
      \item Designed multiple mock servers, clients, and services with Ginkgo and Gomega to test the algorithms.
     }
@@ -44,7 +44,7 @@
 \end{resumeList}
 \end{resumeItem}
 
-\ifboolexpr{ togl {graphics} or togl {general} }{}{
+\ifboolexpr{ togl {graphics} or togl {general} or togl {math} }{}{
  \begin{resumeItem}
  \experienceHead{Data Science Intern}{Tektorch.ai}{Apr 2022 - Aug 2022}{Online}
  \begin{resumeList}
@@ -54,7 +54,7 @@
  \end{resumeItem}
 }
 
-\ifboolexpr{ togl {graphics} or togl {general} }{}{
+\ifboolexpr{ togl {graphics} or togl {general} or togl{math} }{}{
  \begin{resumeItem}
  \experienceHead{Math Competition Teacher}{Webber Academy}{Aug 2021 - June 2022}{Calgary, AB.}
  \begin{resumeList}
@@ -72,7 +72,7 @@
 % \end{resumeList}
 % \end{resumeItem}
 
-\ifboolexpr{ togl {graphics} or togl {general} }{}{
+\ifboolexpr{ togl {graphics} or togl {general} or togl{math} }{}{
  \begin{resumeItem}
  \experienceHead{Student Council President}{Webber Academy}{Sep 2021 - Jun 2022}{Calgary, AB.}
  \begin{resumeList}
@@ -89,7 +89,7 @@
  \experienceHead{Machine Learning Research Intern}{University of Alberta}{Jul 2021 - Aug 2021}{Remote}
  \begin{resumeList}
      \item Trained and employed Natural Language Processing (NLP) models to help determine the cause of a change in depressive language in Tweets as part of a psychology study.
- \ifboolexpr{ togl {general} }{
+ \ifboolexpr{ togl {general} or togl {math} }{
      \item Created an evaluation framework to analyze mouse position data and automated it in Bash to reduce time spent by $20\times$.
  }{
      \item Created an evaluation framework with graphs and videos to analyse subject mouse position data during exams.
