--- a/resume-cv/skills.tex
+++ b/resume-cv/skills.tex
@@ -2,7 +2,7 @@
 
 \begin{resumeItem}
 
-\ifboolexpr{ togl {graphics} or togl {general} }{}{
+\ifboolexpr{ togl {graphics} or togl {general} or togl {math} }{}{
 \subsubsection{Linguistics}
 English, Hindi, Spanish, Russian, Romanian (read, write, speak), and Japanese (only spoken)
 
